# Sudoku-GUI

./: README.md
Sudoku-GUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Sudoku_GUI/: CMakeLists.txt  main.cpp
